--- a/index.html
+++ b/index.html
@@ -1,1 +1,458 @@
-<h1>哈哈哈</h1>
+<!DOCTYPE html>
+<html>
+
+	<head>
+		<meta charset="UTF-8">
+		<title>美食活动-秦政韬</title>
+		<link rel="stylesheet" href="../css/idea.css" />
+		<div class="fix posi">
+			<iframe src="header.html" width="100%" height="63px" scrolling="no" frameborder="0"></iframe>
+		</div>
+		<div>
+			<iframe src="top.html" width="100%" height="100%" scrolling="no" frameborder="0"></iframe>
+		</div>
+		
+	</head>
+
+	<body>
+
+		<div class="Body">
+			<div class="content">
+
+				<div class="content-l">
+					<div class="c-l-up">
+						<ul>
+							<li>
+								<div class="pic">
+									<a href="" title="国美十二国美味第二期：谁是你心中的夜宵霸主"><img src="img-idea/20170804150181335982613.jpg" /></a>
+								</div>
+								<div class="detail">
+									<h2>
+										<a href="" title="国美十二国美味第二期：谁是你心中的夜宵霸主">[话题征集] 国美十二国美味第二期：谁是你心中的夜宵霸主</a>
+									</h2>
+									<p class="d-c1">2017年8月04日-2017年8月15日</p>
+									<p class="d-c2">有人说一个活色生香的夏夜，总是从一只小龙虾开始的。三十几度的夜风里，约上几位好友出门吃虾。只要走进了虾馆，天下大同。此刻你唯一的身份，就是小龙虾的信徒。还有人说，小龙虾才刚登上夜宵...</p>
+									<a class="sty-a"><img src="img-idea/已经结束.png" /></a>
+								</div>
+							</li>
+							<li>
+								<div class="pic">
+									<a href="" title="国美十二国美味第一季：做鸭的N种方法"><img src="img-idea/20170711149973962086913.jpg" /></a>
+								</div>
+								<div class="detail">
+									<h2>
+										<a href="" title="国美十二国美味第一季：做鸭的N种方法">[话题征集] 国美十二国美味第一季：做鸭的N种方法</a>
+									</h2>
+									<p class="d-c1">2017年7月12日-2017年7月22日</p>
+									<p class="d-c2">做鸭的方法千千种，总有一种是你最爱，烤鸭、盐水鸭、樟茶鸭、板鸭……召集做鸭的方法，你做过的，吃过的，看过的，听说过的，统统可以，分享你的做鸭方法，做鸭神器带回家。</p>
+									<a class="sty-a"><img src="img-idea/已经结束.png" /></a>
+								</div>
+							</li>
+							<li>
+								<div class="pic">
+									<a href="" title="我们身边的深夜食堂"><img src="img-idea/20170614149743342234013.jpg" /></a>
+								</div>
+								<div class="detail">
+									<h2>
+										<a href="" title="我们身边的深夜食堂">[话题征集] 我们身边的深夜食堂</a>
+									</h2>
+									<p class="d-c1">2017年6月14日-2017年7月02日</p>
+									<p class="d-c2">以前就看过《深夜食堂》，被其中的美食与人情温暖。国内版电视剧刚刚开播，就迎来全民大吐槽。是啊，中国人眼里的深夜食堂，难道不应该是烤串、大排档，还有身边各色小人物吗？ 也应该还有其...</p>
+									<a class="sty-a"><img src="img-idea/已经结束.png" /></a>
+								</div>
+							</li>
+							<li>
+								<div class="pic">
+									<a href="" title="ACA第四届烘焙大赛暨是爱吃节总决赛"><img src="img-idea/20170401149101980683313.jpg" /></a>
+								</div>
+								<div class="detail">
+									<h2>
+										<a href="" title="ACA第四届烘焙大赛暨是爱吃节总决赛">[菜谱征集] ACA第四届烘焙大赛暨是爱吃节总决赛</a>
+									</h2>
+									<p class="d-c1">2017年5月27日-2017年6月05日</p>
+									<p class="d-c2">明明饱腹，烘焙室里的香味总让人忍俊不禁；明明不饿，看到桌上的零食还是按耐不住；明明撑了，还停不下来，明明很爱吃。是爱吃，就要大声说出来！是爱吃，就要放开吃！美食天下&ACA北美电器...</p>
+									<a class="sty-a"><img src="img-idea/已经结束.png" /></a>
+								</div>
+							</li>
+							<li>
+								<div class="pic">
+									<a href="" title="“花吃”：去看那花花世界"><img src="img-idea/20170412149198573893613.jpg" alt="" /></a>
+								</div>
+								<div class="detail">
+									<h2>
+										<a href="" title="“花吃”：去看那花花世界">[话题征集] “花吃”：去看那花花世界</a>
+									</h2>
+									<p class="d-c1">2017年4月14日-2017年5月31日</p>
+									<p class="d-c2">“花馔”，即是用四时鲜花做成的菜肴或点心。有人说，中国人口味之杂，堪为世界之冠；而其实，中国人口味之风雅，也是世上难得。当美食遇上鲜花，吃的目的不仅是果腹，更吃出了些许意境。 遇...</p>
+									<a class="sty-a"><img src="img-idea/已经结束.png" /></a>
+								</div>
+							</li>
+							<li>
+								<div class="pic">
+									<a href="" title="ACA第四届烘焙大赛暨是爱吃节半决赛"><img src="img-idea/2017050414938658905409280111.jpg" alt="" /></a>
+								</div>
+								<div class="detail">
+									<h2>
+										<a href="" title="ACA第四届烘焙大赛暨是爱吃节半决赛">[菜谱征集] ACA第四届烘焙大赛暨是爱吃节半决赛</a>
+									</h2>
+									<p class="d-c1">2017年5月05日-2017年5月20日</p>
+									<p class="d-c2">明明饱腹，烘焙室里的香味总让人忍俊不禁；明明不饿，看到桌上的零食还是按耐不住；明明撑了，还停不下来，明明很爱吃。是爱吃，就要大声说出来！是爱吃，就要放开吃！美食天下&ACA北美电器...</p>
+									<a class="sty-a"><img src="img-idea/已经结束.png" /></a>
+								</div>
+							</li>
+							<li>
+								<div class="pic">
+									<a href="" title="ACA第四届烘焙大赛暨是爱吃节海选赛"><img src="img-idea/2017050414938658905409280111.jpg" alt="" /></a>
+								</div>
+								<div class="detail">
+									<h2>
+										<a href="" title="ACA第四届烘焙大赛暨是爱吃节海选赛">[菜谱征集] ACA第四届烘焙大赛暨是爱吃节海选赛</a>
+									</h2>
+									<p class="d-c1">2017年4月05日-2017年4月28日</p>
+									<p class="d-c2">明明饱腹，烘焙室里的香味总让人忍俊不禁；明明不饿，看到桌上的零食还是按耐不住；明明撑了，还停不下来，明明很爱吃。是爱吃，就要大声说出来！是爱吃，就要放开吃！美食天下&ACA北美电器...</p>
+									<a class="sty-a"><img src="img-idea/已经结束.png" /></a>
+								</div>
+							</li>
+							<li>
+								<div class="pic">
+									<a href="" title="春食野菜香"><img src="img-idea/20170322149016397614413.jpg" alt="" /></a>
+								</div>
+								<div class="detail">
+									<h2>
+										<a href="" title="春食野菜香">[菜谱征集] 春食野菜香</a>
+									</h2>
+									<p class="d-c1">2017年3月22日-2017年4月16日</p>
+									<p class="d-c2">春风徐徐而来，吃货们是否闻到了野菜的气息？荠菜、马齿苋、蒲公英……一大波美味冒出新芽，等待唤醒你的味蕾。这些无污染、低脂、多纤维的野菜不仅美味可口而且营养丰富，有益健康。无论清炒、...</p>
+									<a class="sty-a"><img src="img-idea/已经结束.png" /></a>
+								</div>
+							</li>
+							<li>
+								<div class="pic">
+									<a href="" title="家乡的味道，2017人人都是美食家"><img src="img-idea/20170107125118182175023.jpg" alt="" /></a>
+								</div>
+								<div class="detail">
+									<h2>
+										<a href="" title="家乡的味道，2017人人都是美食家">[菜谱征集] 家乡的味道，2017人人都是美食家</a>
+									</h2>
+									<p class="d-c1">2017年1月06日-2017年2月09日</p>
+									<p class="d-c2">故乡，是一个人行走天地间扯不断的根。无论是在晓风残月的异乡，还是月黑风高的夜晚，不觉然就有种熟悉的味道悄然潜入心底，那便是家乡的味道。这味道是一种特别的存在，它饱含着汗水和记忆，它...</p>
+									<a class="sty-a"><img src="img-idea/已经结束.png" /></a>
+								</div>
+							</li>
+							<li class="la">
+								<div class="pic">
+									<a href="" title="2017吃货年"><img src="img-idea/20170106183141162296330.jpg" alt="" /></a>
+								</div>
+								<div class="detail">
+									<h2>
+										<a href="" title="2017吃货年">[话题征集] 2017吃货年</a>
+									</h2>
+									<p class="d-c1">2017年1月06日-2017年2月09日</p>
+									<p class="d-c2">又是一年春节至，红红的灯笼，吉祥如意的对联，各种各样的年画，处处洋溢着年到来的喜庆。在我们的记忆中，关于新年的回忆总是美好的，不管是如期而至的皑皑白雪；还是压在枕头下的压岁钱；或是...</p>
+									<a class="sty-a"><img src="img-idea/已经结束.png" /></a>
+								</div>
+							</li>
+						</ul>
+					</div>
+					<!--c-l-up-->
+
+					<div class="c-l-down">
+						<div class="page-numbers">
+							<ba class="f" href="">1</ba>
+							<a href="">2</a>
+							<a href="">3</a>
+							<a href="">4</a>
+							<a href="">5</a>
+							<span>...</span>
+							<a href="">12</a>
+							<a href="">下一页</a>
+						</div>
+					</div>
+					<!--c-l-down-->
+
+				</div>
+				<!--content-l-->
+
+				<div class="content-r">
+					<div class="c-r-t1">
+						<h3 class="t1">免费抽奖</h3>
+					</div>
+					<!--c-r-t1-->
+
+					<div class="c-r-c1">
+						<ul>
+							<li class="mengc">
+								<a href="" title="" class="tu1"><img src="img-idea/20170929150666012399513.png" /></a>
+								<div class="mengcen">
+									抽奖
+								</div>
+								<p>
+									<a class="zi" href="" title="">九阳（Joyoung）J6多功能自动烹饪炒菜机</a>
+								</p>
+								<p>
+									<span>2017年09月29日-10月27日</span>
+								</p>
+								<p>
+									<b>￥1599.00</b>
+									<a href="" class="do">免费抽奖</a>
+								</p>
+							</li>
+							<li class="mengc">
+								<a href="" title="" class="tu1"><img src="img-idea/20170925150632426172213.png" /></a>
+								<div class="mengcen">
+									抽奖
+								</div>
+								<p>
+									<a class="zi" href="" title="">Haier 海尔智能嫩烤箱 (珍珠白)</a>
+								</p>
+								<p>
+									<span>2017年09月25日-10月23日</span>
+								</p>
+								<p>
+									<b>￥1599.00</b>
+									<a href="" class="do">免费抽奖</a>
+								</p>
+							</li>
+							<li class="mengc">
+								<a href="" title="" class="tu1"><img src="img-idea/QQ截图20171022172524.png" /></a>
+								<div class="mengcen">
+									抽奖
+								</div>
+								<p>
+									<a class="zi" href="" title="">ACA/北美电器 AHM-S300手持式婴儿辅食 料理机 多功能搅拌料理棒</a>
+								</p>
+								<p>
+									<span>2017年10月18日-11月08日</span>
+								</p>
+								<p>
+									<b>￥299.00</b>
+									<a href="" class="do">免费抽奖</a>
+								</p>
+							</li>
+							<li class="mengc">
+								<a href="" title="" class="tu1"><img src="img-idea/20171016150814620287013.png" /></a>
+								<div class="mengcen">
+									抽奖
+								</div>
+								<p>
+									<a class="zi" href="" title="">ACA/北美电器 AHM-P125A手持搅拌器电动打蛋器</a>
+								</p>
+								<p>
+									<span>2017年10月16日-11月06日</span>
+								</p>
+								<p>
+									<b>￥79.00</b>
+									<a href="" class="do">免费抽奖</a>
+								</p>
+							</li>
+							<li class="mengc">
+								<a href="" title="" class="tu1"><img src="img-idea/QQ截图20171022173038.png" /></a>
+								<div class="mengcen">
+									抽奖
+								</div>
+								<p>
+									<a class="zi" href="" title="">青山老农玫瑰焕彩基础护理四件套</a>
+								</p>
+								<p>
+									<span>2017年10月13日-11月03日</span>
+								</p>
+								<p>
+									<b>￥199.00</b>
+									<a href="" class="do">免费抽奖</a>
+								</p>
+							</li>
+							<li class="mengc">
+								<a href="" title="" class="tu1"><img src="img-idea/20171013150785893420313.png" /></a>
+								<div class="mengcen">
+									抽奖
+								</div>
+								<p>
+									<a class="zi" href="" title="">北美电器（ACA）AB-PCT1515 自动投果料酵母双料面包机</a>
+								</p>
+								<p>
+									<span>2017年10月13日-11月01日</span>
+								</p>
+								<p>
+									<b>￥639.00</b>
+									<a href="" class="do">免费抽奖</a>
+								</p>
+							</li>
+							<li class="mengc">
+								<a href="" title="" class="tu1"><img src="img-idea/20171011150770840896713.png" /></a>
+								<div class="mengcen">
+									抽奖
+								</div>
+								<p>
+									<a class="zi" href="" title="">青山老农手工皂（一盒）＋面贴膜（十片） 青山老农手工皂＋面贴膜</a>
+								</p>
+								<p>
+									<span>2017年10月11日-10月31日</span>
+								</p>
+								<p>
+									<b>￥120.00</b>
+									<a href="" class="do">免费抽奖</a>
+								</p>
+							</li>
+							<li class="mengc">
+								<a href="" title="" class="tu1"><img src="img-idea/20170929150668031894913.png" /></a>
+								<div class="mengcen">
+									抽奖
+								</div>
+								<p>
+									<a class="zi" href="" title="">ACA/北美电器 ABT-MP12 烘焙伴侣模具套餐</a>
+								</p>
+								<p>
+									<span>2017年09月29日-10月30日</span>
+								</p>
+								<p>
+									<b>￥199.00</b>
+									<a href="" class="do">免费抽奖</a>
+								</p>
+							</li>
+							<li class="mengc">
+								<a href="" title="" class="tu1"><img src="img-idea/20171010150760166066213.png" /></a>
+								<div class="mengcen">
+									抽奖
+								</div>
+								<p>
+									<a class="zi" href="" title="">蓝月亮机洗至尊「浓缩+」洗衣液低泡亮白增艳家庭套装 蓝月亮机洗至尊</a>
+								</p>
+								<p>
+									<span>2017年10月10日-10月30日</span>
+								</p>
+								<p>
+									<b>￥99.00</b>
+									<a href="" class="do">免费抽奖</a>
+								</p>
+							</li>
+							<li class="mengc">
+								<a href="" title="" class="tu1"><img src="img-idea/QQ截图20171022172354.png" /></a>
+								<div class="mengcen">
+									抽奖
+								</div>
+								<p>
+									<a class="zi" href="" title="">Brita Marella碧然德滤水壶套装</a>
+								</p>
+								<p>
+									<span>2017年09月27日-10月25日</span>
+								</p>
+								<p>
+									<b>￥182.00</b>
+									<a href="" class="do">免费抽奖</a>
+								</p>
+							</li>
+						</ul>
+					</div>
+					<!--c-r-c1-->
+
+					<div class="c-r-t1">
+						<h3 class="t1">免费试用</h3>
+					</div>
+					<!--c-r-t2-->
+
+					<div class="c-r-c1">
+						<ul>
+							<li class="mengc">
+								<a href="" title="" class="tu1"><img src="img-idea/201705261495764271105.jpg" /></a>
+								<div class="mengcen">
+									试用
+								</div>
+								<div class="shizi1"></div>
+								<div class="shizi2"></div>
+								<p>
+									<a class="zi" href="" title="">五常大米稻花香·试吃体验装</a>
+								</p>
+								<p>
+									<span>2017年05月26日-2017年06月12日</span>
+								</p>
+								<p>
+									<b>￥21.00</b>
+								</p>
+							</li>
+							<li class="mengc">
+								<a href="" title="" class="tu1"><img src="img-idea/201706091496993277302.jpg" /></a>
+								<div class="mengcen">
+									 试用
+								</div>
+								<div class="shizi1"></div>
+								<div class="shizi2"></div>
+								<p>
+									<a class="zi" href="" title="">信任之美·八朵木耳一身轻</a>
+								</p>
+								<p>
+									<span>2017年05月27日-2018年05月27日</span>
+								</p>
+								<p>
+									<b>￥59.00</b>
+								</p>
+							</li>
+						</ul>
+					</div>
+					<!--c-r-c2-->
+
+					<div class="c-r-c3">
+						<div class="picture">
+							<ul class="xx">
+								<li><img src="img-idea/r0.jpg" /></li>
+								<li><img src="img-idea/r1.jpg" /></li>
+								<li><img src="img-idea/r2.jpg" /></li>
+								<li><img src="img-idea/r3.jpg" /></li>
+								<li><img src="img-idea/r4.jpg" /></li>
+								<li><img src="img-idea/r0.jpg" /></li>
+							</ul>
+							<div class="x1">
+								<img src="img-idea/r3.jpg" />
+							</div>
+							<div class="x2">
+								<img src="img-idea/r4.jpg" />
+							</div>
+							<div class="x3">
+								<img src="img-idea/r0.jpg" />
+							</div>
+						</div>
+
+					</div>
+					<!--c-r-c3-->
+
+				</div>
+				<!--content-r-->
+
+			</div>
+			<!--content-->
+			<!-- footer -->
+			<div class="footer">
+				<div class="fl">
+					<h5 class="h5">美食天下 - 让吃更美好！</h5>
+					<p class="list">
+						<a href="">菜谱</a> ·
+						<a href="">食材</a> ·
+						<a href="">魔方</a> ·
+						<a href="">关于我们</a> ·
+						<a href="">联系我们</a> ·
+						<a href="">加入我们</a> ·
+						<a href="">服务声明</a> ·
+						<a href="">友情链接</a> ·
+						<a href="">网站地图</a> ·
+						<a href="">移动应用</a>
+					</p>
+					<p class="copy">© 2004-2017 美食天下 保留所有权利 - 京ICP证090244号</p>
+				</div>
+				<div class="erweima fr">
+					<img src="img-idea/weixin.png" alt="" />
+					<p>手机客户端</p>
+				</div>
+				<div class="erweima fr">
+					<img src="img-idea/msc_app.png" alt="" />
+					<p>微信公众号</p>
+				</div>
+			</div>
+		</div>
+		<div class="huoluobo">
+			<a href="">
+				<img src="img-idea/gotop.png" />
+			</a>
+		</div>
+		<!--Body-->
+	</body>
+
+</html>
